Crash on editing multiple UVs of multiple different objects at the same time #80899

Closed
opened 2020-09-17 19:08:02 +02:00 by iida · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX Vega ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.2 26.20.15029.27017

Blender Version
Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: 0330d1af29
Caused by 2ba1cf4b40, 9681708c1c was not enough to fix

Short description of error
When multiple objects are edited at the same time, editing their UVs causes a crash. If not immedietly when clicking an UV set atleast after couple clicks.

Exact steps for others to reproduce the error

Open attached .blend file
Click one object and then Shift+Click the second
Tab to edit mode
In UV editor in vertex mode select a vertex
Press G, it crashes either immediately or after couple moves

bug.blend

Thank you for helping

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX Vega ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.2 26.20.15029.27017 **Blender Version** Broken: version: 2.90.0, branch: master, commit date: 2020-08-31 11:26, hash: `0330d1af29` Caused by 2ba1cf4b40, 9681708c1c was not enough to fix **Short description of error** When multiple objects are edited at the same time, editing their UVs causes a crash. If not immedietly when clicking an UV set atleast after couple clicks. **Exact steps for others to reproduce the error** Open attached .blend file Click one object and then Shift+Click the second Tab to edit mode In UV editor in vertex mode select a vertex Press G, it crashes either immediately or after couple moves [bug.blend](https://archive.blender.org/developer/F8892749/bug.blend) Thank you for helping
Author

Added subscriber: @newis

Added subscriber: @newis
Member

Added subscribers: @JulianEisel, @ZedDB, @lichtwerk

Added subscribers: @JulianEisel, @ZedDB, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Caused by 2ba1cf4b40

There was #80561 (Crashing when I alter UVs in multi-mesh editing (using proportional editing)), but apparently the fix was not enough.

At least it asserts for me with the file from the report (checked the meshes, thy are valid afaict)

BLI_assert(BM_elem_flag_test(l, BM_ELEM_TAG) == 0);
1  raise                                                                      0x7ffff78159e5 
2  abort                                                                      0x7ffff77fe895 
3  _BLI_assert_abort                         BLI_assert.c                50   0xb73f289      
4  uv_set_connectivity_distance              transform_convert_mesh_uv.c 133  0x4229399      
5  createTransUVs                            transform_convert_mesh_uv.c 357  0x422da2d      
6  createTransData                           transform_convert.c         1203 0x420a046      
7  initTransform                             transform.c                 1759 0x42031db      
8  transformops_data                         transform_ops.c             394  0x426ab88      
9  transform_invoke                          transform_ops.c             510  0x426aeb0      
10 wm_operator_invoke                        wm_event_system.c           1301 0x36ba4da      
11 wm_handler_operator_call                  wm_event_system.c           2132 0x36bc333      
12 wm_handlers_do_keymap_with_keymap_handler wm_event_system.c           2442 0x36bd002      
13 wm_handlers_do_intern                     wm_event_system.c           2739 0x36bdf52      
14 wm_handlers_do                            wm_event_system.c           2866 0x36be416      
15 wm_event_do_handlers                      wm_event_system.c           3364 0x36bf9ed      
16 WM_main                                   wm.c                        482  0x36b3eb3      
17 main                                      creator.c                   530  0x326c63e      

CC @ZedDB
CC @JulianEisel

Caused by 2ba1cf4b40 There was #80561 (Crashing when I alter UVs in multi-mesh editing (using proportional editing)), but apparently the fix was not enough. At least it asserts for me with the file from the report (checked the meshes, thy are valid afaict) ``` BLI_assert(BM_elem_flag_test(l, BM_ELEM_TAG) == 0); ``` ``` 1 raise 0x7ffff78159e5 2 abort 0x7ffff77fe895 3 _BLI_assert_abort BLI_assert.c 50 0xb73f289 4 uv_set_connectivity_distance transform_convert_mesh_uv.c 133 0x4229399 5 createTransUVs transform_convert_mesh_uv.c 357 0x422da2d 6 createTransData transform_convert.c 1203 0x420a046 7 initTransform transform.c 1759 0x42031db 8 transformops_data transform_ops.c 394 0x426ab88 9 transform_invoke transform_ops.c 510 0x426aeb0 10 wm_operator_invoke wm_event_system.c 1301 0x36ba4da 11 wm_handler_operator_call wm_event_system.c 2132 0x36bc333 12 wm_handlers_do_keymap_with_keymap_handler wm_event_system.c 2442 0x36bd002 13 wm_handlers_do_intern wm_event_system.c 2739 0x36bdf52 14 wm_handlers_do wm_event_system.c 2866 0x36be416 15 wm_event_do_handlers wm_event_system.c 3364 0x36bf9ed 16 WM_main wm.c 482 0x36b3eb3 17 main creator.c 530 0x326c63e ``` CC @ZedDB CC @JulianEisel

This issue was referenced by 6f28e6998b

This issue was referenced by 6f28e6998b36f09b70fec059ad6bdc6bbfd175c6

This issue was referenced by e5a572157d

This issue was referenced by e5a572157d8cd5947a0b4b7420e728d57d6965ff

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastian Parborg self-assigned this 2020-09-21 16:11:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80899
No description provided.